--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -58,6 +58,8 @@
 \usepackage{xcolor}         % barevná sazba
 \usepackage{listings}		% code higlighting
 
+\graphicspath{ {../img/} }
+
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
 \definecolor{greencomments}{rgb}{0,0.5,0}
 \definecolor{redstrings}{rgb}{0.9,0,0}
