doc - chapter outline added

--- a/doc/cs/kap02.tex
+++ b/doc/cs/kap02.tex
@@ -227,6 +227,11 @@ V obou příkazech je potřeba specifikovat cílový a startup projekt. Cílový
 
 \subsection{Services}
 
+- pomocne sluzby pro komunikaci s databazi
+- vsechny dedi DbService + IDbService
+- interface + implementace
+- typicky pro kazdou entitu 1 sluzba
+- extension metody pro praci s databazi
 obsahuje pomocné služby pro komunikaci s databází, 
 
 \subsection{API}
